--- a/carconfig.html
+++ b/carconfig.html
@@ -9,6 +9,57 @@
 
 <h1>Fahrzeug-Konfigurator</h1>
 
+<form action='https://it.bzz.ch/demo/formdata/index.php' method='post'>
+  <!-- Fahrzeugmodelle -->
+  <fieldset>
+    <legend>Fahrzeugmodell</legend>
+    <select id='Fahrzeugmodell' name='Fahrzeugmodell' required>
+      <optgroup label='Kompaktwagen'>
+        <option value='A-Klasse'>A-Klasse</option>
+        <option value='B-Klasse'>B-Klasse</option>
+        <option value='CLA'>CLA</option>
+        <option value='GLA'>GLA</option>
+      </optgroup>
+      <optgroup label='Limousinen und T-Modelle'>
+        <option value='C-Klasse'>C-Klasse</option>
+        <option value='E-Klasse'>E-Klasse</option>
+        <option value='S-Klasse'>S-Klasse</option>
+        <option value='CLS'>CLS</option>
+      </optgroup>
+      <optgroup label='SUVs und Offroader'>
+        <option value='G-Klasse'>G-Klasse</option>
+        <option value='GLB'>GLB</option>
+        <option value='GLC'>GLC</option>
+        <option value='GLE'>GLE</option>
+        <option value='GLS'>GLS</option>
+      </optgroup>
+      <optgroup label='Sportwagen'>
+        <option value='AMG GT'>AMG GT</option>
+      </optgroup>
+      <optgroup label='Elektroautos'>
+        <option value='EQC'>EQC</option>
+        <option value='EQS'>EQS</option>
+      </optgroup>
+    </select>
+  </fieldset>
+
+  <!-- Lackfarben -->
+  <fieldset>
+    <legend>Lackfarbe</legend>
+    <input id='Rot' name='Lackfarbe' type='radio' value='Rot'>
+    <label for='Rot'>Rot</label><br>
+    <input id='Blau' name='Lackfarbe' type='radio' value='Blau'>
+    <label for='Blau'>Blau</label><br>
+    <input id='Grün' name='Lackfarbe' type='radio' value='Grün'>
+    <label for='Grün'>Grün</label><br>
+    <input id='Schwarz' name='Lackfarbe' type='radio' value='Schwarz'>
+    <label for='Schwarz'>Schwarz</label>
+  </fieldset>
+
+  <!-- Submit Button -->
+  <input type='submit' value='Konfiguration absenden'>
+</form>
+
 
 </body>
 </html>
